updates to make login work properly

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -10,7 +10,7 @@
         <span class="logo">Bookmarks</span>
     </div>
     <div ="content">
-        {% blcok content %}
+        {% block content %}
         {% endblock %}
     </div>
 </body>
